Adding page formatting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Charlotte's Site</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <style>
+      body {background-color: hsla(218, 56%, 80%, 0.694);}
+      h1   {color: rgb(49, 80, 128);}
+      p    {color: rgb(59, 57, 123);}
+      </style>
+  
 <body>
     <!-- Adding titles for the site -->
   <div class="container">
@@ -33,10 +39,10 @@
       <img src="https://lh4.googleusercontent.com/ivK3ALyz1ROoDYRUHrTow5fzlVtn7svsqqAHBbq0AWbzfDpl1c-EpXZbzzKBYQf8CoHuL015vVCcEgL8axDH0zVRfmTHiHR1oMLN_WMpGAOsA0-OM3C6es0kXLchGrdU8Q=w1280" alt="Habitat suitability map" width="90%">
     </div>
     <div class="col">
-        <img src="https://lh3.googleusercontent.com/wEn23rHlXnZTyB9S7HwxG_pE0ZPiUzG1O6MBMitdRbbcxh0QkZLqJIRF4VO3bNoeO9LHtf92AuB-e0kQtRnAyln3SwBEVv5naxWSYRM36u6LJ9maeEw0bouCNcZalPJx9A=w1280" alt="Lancover types map"width="80%">
+        <img src="https://lh3.googleusercontent.com/wEn23rHlXnZTyB9S7HwxG_pE0ZPiUzG1O6MBMitdRbbcxh0QkZLqJIRF4VO3bNoeO9LHtf92AuB-e0kQtRnAyln3SwBEVv5naxWSYRM36u6LJ9maeEw0bouCNcZalPJx9A=w1280" alt="Lancover types map" width="80%">
     </div>
     <div class="col">
-        <img src="https://lh6.googleusercontent.com/2Agdlpl2h8f_3yGIzEuPWLYhZrH2ffKp_9crhYmXYAUcBhaOFw1Ox0jGHgoX__NRQhfXLpXRMllgfgqTzWA6BFP2pef8KXbQTxkDrbuuvHLfCucjBFSKBPqZao1-DO4jMA=w1280" alt="Interpolation example"width="80%">
+        <img src="https://lh6.googleusercontent.com/2Agdlpl2h8f_3yGIzEuPWLYhZrH2ffKp_9crhYmXYAUcBhaOFw1Ox0jGHgoX__NRQhfXLpXRMllgfgqTzWA6BFP2pef8KXbQTxkDrbuuvHLfCucjBFSKBPqZao1-DO4jMA=w1280" alt="Interpolation example" width="90%">
     </div>
 </div>
     <div>
