--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>Rough Resume Web Map Site</h1>
       <br>
       <!-- Adding text explaining te purpose of the site -->
-    <p>This site is a space for me to experiment building websites with the goal of making my own web-based GIS portfolio for the maps I've made in my undergrad. </p>
+    <p>This site is a space for me to experiment with building websites with the end goal of making my own web-based GIS portfolio for the maps I've made in my undergrad. </p>
     <br>
     <p>I will also use this site to learn about incorporating web-mapping into sites I have developed myself. The end goal is to create a web-map that also functions as a resume, depicting the experiences I've had as points on a map that can be interacted with to provide more information about my skillsets and goals.</p>
     <br>
